fix not zoom when click input on mobile

--- a/assets/css/_form.scss
+++ b/assets/css/_form.scss
@@ -25,7 +25,7 @@
     box-sizing: border-box;
     border: none;
     outline: none;
-    font-size: 10px;
+    font-size: 11px;
     color: #000;
   }
 
@@ -69,6 +69,7 @@
             border-radius: 3px !important;
           }
           .select-title {
+            font-size: 11px;
             padding-top: 4px;
             padding-left: 8px;
             padding-bottom: 4px;
@@ -81,7 +82,6 @@
           padding-right: 12px;
           li {
             padding-top: 8px;
-            font-size: 12px;
             padding-bottom: 8px;
           }
         }
@@ -113,6 +113,7 @@
           & + .select-styled {
             position: relative;
             padding: 4px 8px;
+            font-size: 11px;
             background: #e6e6e6;
             &:after {
               content: "";
@@ -132,6 +133,7 @@
           }
           li {
             padding-top: 4px;
+            font-size: 11px;
             &:not(:last-child) {
               padding-bottom: 4px;
             }
