--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1233,7 +1233,7 @@
           box-sizing: border-box;
   border: none;
   outline: none;
-  font-size: 10px;
+  font-size: 11px;
   color: #000;
 }
 
@@ -1284,6 +1284,7 @@
 }
 
 .form .select-style.normal .selection .select-title {
+  font-size: 11px;
   padding-top: 4px;
   padding-left: 8px;
   padding-bottom: 4px;
@@ -1298,7 +1299,6 @@
 
 .form .select-style.normal .select .dropdown li {
   padding-top: 8px;
-  font-size: 12px;
   padding-bottom: 8px;
 }
 
@@ -1325,6 +1325,7 @@
 .form-box .select-style .select .dropdown + .select-styled {
   position: relative;
   padding: 4px 8px;
+  font-size: 11px;
   background: #e6e6e6;
 }
 
@@ -1348,6 +1349,7 @@
 
 .form-box .select-style .select .dropdown li {
   padding-top: 4px;
+  font-size: 11px;
 }
 
 .form-box .select-style .select .dropdown li:not(:last-child) {
